<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="contentDescription"
    tools:targetApi="lollipop">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            style="@style/TitleTextStyle"
            android:text="@string/instruction_title" />

        <TextView
            style="@style/DescriptionTextStyle"
            android:layout_marginBottom="@dimen/one_and_half_grid_unit"
            android:text="@string/instruction_description1" />

        <TextView
            style="@style/DescriptionTextStyle"
            android:layout_marginBottom="@dimen/one_and_half_grid_unit"
            android:text="@string/instruction_description2" />

        <TextView
            style="@style/DescriptionBoldTextStyle"
            android:text="@string/instruction_description3" />
    </LinearLayout>

    <Button
        style="@style/FlatActionButtonStyle"
        android:id="@+id/btn_continue"
        android:text="@string/btn_action_continue" />
</LinearLayout>